Fixed IDE warnings.