@@ -106,7 +106,7 @@ public class TLEKalmanOrbitDeterminationTest extends AbstractOrbitDetermination<
                                                            final ODEIntegratorBuilder builder,
                                                            final double positionScale) {
         TLEPropagatorBuilder tb = new TLEPropagatorBuilder(new FixedPointTleGenerationAlgorithm(templateTLE));
-        tb.getPropagationParametersDrivers().getDrivers().get(0).setSelected(true);
+        tb.getPropagationParametersDrivers().getDrivers().getFirst().setSelected(true);
         return tb;
     }
 
